# openmac

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.codex/skills/openmac-web-automation/: SKILL.md
.codex/skills/openmac-web-automation/agents/: openai.yaml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  docs.yaml  publish.yaml
docs/: conf.py
docs/_extensions/: __init__.py
docs/_static/: custom.css
examples/: README.md  bookmarks_tree.py  list_windows_and_tabs.py  open_and_js.py  pipeline.py
src/achrome/: __init__.py
src/achrome/adapters/cli/: __main__.py
src/achrome/adapters/http/: app.py
src/achrome/core/: chrome.py  exceptions.py  models.py  source.py  tabs.py  windows.py
src/achrome/core/_internal/: chome_api.py  context.py  filterer.py  manager.py  models.py  tab_commands.py  window_commands.py
src/achrome/core/apple_events/: apple_events.py
src/achrome/core/apple_script/: __init__.py  executor.py
src/achrome/core/applescript/: executor.py
src/achrome/core/chrome/: __init__.py  api.py  applescript_bridge.py  backend.py  errors.py  models.py  snapshot.py
src/achrome/ioc/: container.py
src/openmac/: __init__.py  _logging.py  exceptions.py
src/openmac/_internal/: context.py  manager.py  models.py  runner.py  sdef.py
src/openmac/_internal/applescript/: __init__.py  executor.py  runner.py  script_builder.py  serializer.py
src/openmac/_internal/sdef/: __init__.py  base.py  meta.py  types.py
src/openmac/adapters/cli/: __main__.py
src/openmac/adapters/cli/_internal/: actions.py  display.py
src/openmac/adapters/cli/apps/: chrome.py
src/openmac/adapters/cli/apps/chrome/: application.py  windows.py
src/openmac/apps/: exceptions.py
src/openmac/apps/_internal/: base.py  filterer.py
src/openmac/apps/browsers/base/objects/: application.py  tabs.py  windows.py
src/openmac/apps/browsers/chrome/: __init__.py
src/openmac/apps/browsers/chrome/extensions/: source.py
src/openmac/apps/browsers/chrome/objects/: __init__.py  application.py  bookmark_folders.py  bookmark_items.py  tabs.py  windows.py
src/openmac/apps/browsers/pages/: base.py  example.py  exceptions.py  scripts.py
src/openmac/apps/browsers/pages/generic/: parser.py  structure.py
src/openmac/apps/browsers/pages/telegram/: chat.py  root.py  web.py  web_telegram.py
src/openmac/apps/browsers/safari/: __init__.py
src/openmac/apps/browsers/safari/objects/: __init__.py  application.py  documents.py  tabs.py  windows.py
src/openmac/apps/chrome/: application.py  suite.py
src/openmac/apps/chrome/extensions/: source.py
src/openmac/apps/chrome/objects/: application.py  bookmarks_folders.py  tab.py  tabs.py  window.py  windows.py
src/openmac/apps/finder/: __init__.py
src/openmac/apps/shared/: base.py  filterer.py
src/openmac/apps/system_events/: helpers.py
src/openmac/chrome/: suite.py
src/openmac/chrome/sdef/: bundle.py
src/openmac/chrome/sdef/suites/: __init__.py  chromium_suite.py  standard_suite.py
src/openmac/chrome/sdef/suites/chromium/: class_extensions.py  classes.py  commands.py
src/openmac/chrome/suites/: __init__.py  chromium_suite.py  standard_suite.py
src/openmac/finder/: __init__.py
src/openmac/finder/sdef/: bundle.py
src/openmac/finder/sdef/suites/: __init__.py  containers_and_folders_suite.py  enumerations_suite.py  files_suite.py  finder_basics_suite.py  finder_items_suite.py  legacy_suite.py  standard_suite.py  type_definitions_suite.py  window_classes_suite.py
src/openmac/finder/suites/: __init__.py  containers_and_folders_suite.py  enumerations_suite.py  files_suite.py  finder_basics_suite.py  finder_items_suite.py  legacy_suite.py  standard_suite.py  type_definitions_suite.py  window_classes_suite.py
tests/: conftest.py  fakes.py  test_applescript_executor.py  test_chrome_api_bookmarks.py  test_chrome_api_internals.py  test_chrome_api_js.py  test_chrome_api_snapshot.py  test_chrome_api_tabs.py  test_chrome_api_windows.py  test_chrome_applescript_bridge.py  test_chrome_backend.py  test_container.py
tests/core/: test_chrome.py  test_context_injection.py  test_manager_get.py  test_properties.py  test_snapshot.py  test_tab_commands.py  test_tabs_open.py  test_window_actions.py
tests/integration/: conftest.py  test_applescript_executor_integration.py
tests/integration/apps/: helpers.py
tests/integration/apps/browsers/: conftest.py
tests/integration/apps/chrome/: test_application.py  test_objects.py
tests/integration/apps/chrome/objects/: conftest.py  test_applications.py  test_tabs.py  test_windows.py
tests/integration/apps/finder/: conftest.py  test_applescript_runner_integration.py
tests/internal/: test_apple_script.py  test_filterer.py
tests/openmac/: test_generated_suites.py
tests/openmac/_internal/: test_applescript_runner.py  test_applescript_script_builder.py  test_applescript_serializer.py  test_context.py  test_executor.py  test_runner.py  test_sdef.py
tests/tools/sdef/: test_sdef_parser.py
tests/tools/sdef/captured_apps_sdef/: developer.sdef  keynote.sdef  microsoft_excel.sdef  microsoft_outlook.sdef  spotify.sdef
tests/unit/adapters/cli/_internal/: test_actions.py
tests/unit/apps/: test_generated_suites.py
tests/unit/apps/_internal/: test_filterer.py  test_q.py
tests/unit/apps/chrome/objects/: test_tab_window_properties.py  test_tabs.py
tests/unit/apps/shared/: test_base_manager.py  test_filterer.py  test_iteration_tracker.py  test_q.py
tests/unit/internal/: test_applescript_script_builder.py  test_context.py  test_executor.py
tests/unit/openmac/_internal/: test_applescript_runner.py  test_applescript_script_builder.py
tests/unit/tools/sdef/: test_sdef_parser.py
tests/unit/tools/sdef/captured_apps_sdef/: numbers.sdef  pages.sdef  spotify.sdef
tools/sdef/: generate_openmac_suites.py  models.py  parser.py
types/appscript/: __init__.py  aeteparser.py  defaultterminology.py  genericreference.py  keywordwrapper.py  reference.py  referencerenderer.py  reservedkeywords.py  sdefparser.py  terminology.py
(+54 files in other folders)
