[project]
name = "achrome"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Maksim Zayats", email = "maksim@zayats.dev" }]
keywords = [
    "dependency-injection",
    "di",
    "ioc",
    "inversion-of-control",
    "container",
    "autowiring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "diwire>=1.0.0",
    "fastapi>=0.129.0",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
achrome = "achrome.adapters.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/maksimzayats/achrome"
Documentation = "https://docs.achrome.dev"
Repository = "https://github.com/maksimzayats/achrome"
Issues = "https://github.com/maksimzayats/achrome/issues"


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

docs = [
    "furo>=2025.12.19",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
local_partial_types = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "unimported-reveal",
    "deprecated",
    "exhaustive-match",
]
disable_error_code = [
    "unused-ignore",
    "no-any-return",
]
exclude = [
    "benchmarks/",
    "examples/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disable_error_code = ["valid-type", "misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # Ignore ResourceWarnings from unclosed sockets/event loops during GC
    # These come from pytest-asyncio internals and are not related to test code
    "ignore:unclosed <socket.socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
]

[tool.coverage.run]
source = ["src/achrome"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
